syntax="proto2";

package Proto;

message Example
{
	required int32 ExampleInt = 1;
	optional float ExampleFloat = 2;
	optional string ExampleString = 3;
	repeated Item ExampleArray = 4;
}

message Item
{
	required double ItemDouble = 1;
	optional bool ItemBool = 2;
}